Responsive adjustments.  Public page spacing.

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -594,6 +594,9 @@ nav {
 .no-wrap {
   white-space: nowrap; }
 
+.wrap {
+  white-space: normal !important; }
+
 .document-vetting li:first-child,
 .no-top-border {
   border-top: none !important; }
