--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -73,7 +73,7 @@
 
 	<div class="modal-footer" ng-if="publicComment.step === 2">
 		<button class="btn btn-default" type="button" ng-click="publicComment.cancel()">Cancel</button>
-		<button class="btn btn-primary" type="submit">Send</button>
+		<button class="btn btn-primary" type="submit">Submit</button>
 	</div>
 
 	<div class="modal-footer" ng-if="publicComment.step === 3">
