--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -64,9 +64,18 @@
 		</div>
 
 
-		<div class="panel panel-default">
+		<div class="panel panel-default panel-concern">
 
-			<div class="panel-body">		
+			<div class="panel-body">
+				<div class="small form-group">
+					<h3>Disclosure and Use of Personal Information for Submissions</h3>
+					<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre</a> (ePIC).</p>
+					<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy</a> [PDF].</p>
+					<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the projects’ Environmental Assessment (EA) process.</p>
+					<p>Although EAO requires that you provide your name and city/town when making a comment, having your name displayed with your comment is optional. To have your name displayed with your comment, please select the Yes option on the form above.</p>
+					<p>All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
+				</div>
+
 				<div ng-if="vm.comments.length !== 0 && (vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
 					<nav class="navbar navbar-default navbar-sm" ng-init="vm.form.view = 'bydate'" ng-if="vm.comments.length !== 0">
 						<div class="container-fluid">
@@ -135,14 +144,14 @@
 					</div>
 
 
-					<div class="panel panel-default panel-concern" ng-show='( buckets | advancedFilter:vm.filterKeyword).length === 0 && form[heading]'>
+					<div ng-show='( buckets | advancedFilter:vm.filterKeyword).length === 0 && form[heading]'>
 						<div class="panel-body">
 							No comments match these keywords.
 						</div>
 					</div>
 				</div>
 
-				<div class="panel panel-default panel-concern" ng-show="!vm.commentsByTopic && vm.form.view === 'bytopic'">
+				<div ng-show="!vm.commentsByTopic && vm.form.view === 'bytopic'">
 					<div class="panel-body">
 						No comments have been classified by topic yet.  Please check back later.
 					</div>
