--- a/modules/projects/client/views/project-partials/modal-add-public-comment.html
+++ b/modules/projects/client/views/project-partials/modal-add-public-comment.html
@@ -61,8 +61,8 @@
 	<div class="modal-body" ng-if="publicComment.step === 3">
 		<h3>Thank you for your comment</h3>
 		<label class="control-label">What happens next?</label>
-		<p>Within 7 days comment will be published to the public project record and then responded to by the proponent a short time later.</p>
-		<p>All published comments can be found in the lower section of this page.</p>
+		<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy</a> [PDF].</p>
+		<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the projects’ Environmental Assessment (EA) process.</p>
 	</div>
 
 
