--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -57,8 +57,8 @@
 	<div class='col-sm-9'>
 
 		<div class="alert alert-info text-center" ng-if="vm.project.dateCommentsOpen | isInTheFuture">
-			<div >
-				<p>Public Comment Period begins on <strong>{{ vm.project.dateCommentsOpen | amDateFormat:'MMM Do, YYYY'}}</strong></p>
+			<div>
+				<p>Public Comment Period Scheduled for <strong>{{ vm.project.dateCommentsOpen | amDateFormat:'MMM Do, YYYY'}}</strong> to <strong>{{ vm.project.dateCommentsClosed | amDateFormat:'MMM Do, YYYY'}}</strong></p>
 				<countdown-clock x-end="vm.project.dateCommentsOpen"></countdown-clock>
 			</div>
 		</div>
@@ -68,12 +68,19 @@
 
 			<div class="panel-body">
 				<div class="small form-group">
-					<h3>Disclosure and Use of Personal Information for Submissions</h3>
-					<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre</a> (ePIC).</p>
-					<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy</a> [PDF].</p>
-					<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the projects’ Environmental Assessment (EA) process.</p>
-					<p>Although EAO requires that you provide your name and city/town when making a comment, having your name displayed with your comment is optional. To have your name displayed with your comment, please select the Yes option on the form above.</p>
+
+					<h3>Public Comment Policies, Disclosure and Use of Personal Information for Submissions</h3>
+
+					<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre (ePIC)</a>.</p>
+
+					<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
+
+					<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
+
+					<p>Although you may provide your name and city/town when making a comment, in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
+
 					<p>All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
+
 				</div>
 
 				<div ng-if="vm.comments.length !== 0 && (vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
@@ -205,10 +212,9 @@
 					</div>
 				</div>
 
-				<div class="" ng-show="vm.comments.length === 0">
-					<div class="panel-body">
-						There are no comments on this project.						
-					</div>
+				<div ng-show="vm.comments.length === 0">
+					<hr>
+					There are no comments on this project.						
 				</div>
 
 			</div>
