--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -1,12 +1,12 @@
 
 <section id="project-view" class="row">
 
-	<div class='col-sm-3'>
+	<div class='col-sm-4'>
 		<div class="panel panel-default project-info-panel">
 
 			<div class="panel-header">
 				<h1 class="panel-title">
-					{{ vm.project.name }}
+					{{ vm.project.name }}<br/>Public Comment Period
 				</h1>
 			</div>
 
@@ -45,7 +45,7 @@
 				</map>
 			</div>
 			
-			<div class='panel-body' ng-show="vm.comments.length !== 0">
+			<div class='panel-body' ng-show="vm.commentsByDateVis">
 				<label class="control-label">Comment Volume by Date</label>
 				<tmpl-public-project-comments-circle-chart ng-if="vm.commentsByDateVis" x-refresh="vm.refreshVisualization" x-data="vm.commentsByDateVis" id="publicCommentsByDate"></tmpl-public-project-comments-circle-chart>
 			</div>
@@ -54,7 +54,7 @@
 	</div>
 
 
-	<div class='col-sm-9'>
+	<div class='col-sm-8'>
 
 		<div class="alert alert-info text-center" ng-if="vm.project.dateCommentsOpen | isInTheFuture">
 			<div>
@@ -69,18 +69,20 @@
 			<div class="panel-body">
 				<div class="small form-group">
 
-					<h3>Public Comment Policies, Disclosure and Use of Personal Information for Submissions</h3>
+					<h3>Submitting Public Comments: How It Works</h3>
 
 					<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre (ePIC)</a>.</p>
 
 					<p>EAO publishes all comments received within seven days of receipt, except comments that EAO deems to be inappropriate for publication. Comments may be considered inappropriate for publication if - in EAO’s view - they are profane, abusive or do not relate to the matter being consulted upon as stated in our <a href="http://www.eao.gov.bc.ca/pdf/EAO_Policy_Public_Comment.pdf" target="_new">Public Comment Policy [PDF]</a>.</p>
 
-					<p>EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
+					<p ng-show="!legalMore"><a href ng-click="legalMore = true">More...</a></p>
 
-					<p>Although you may provide your name and city/town when making a comment, in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
+					<p ng-show="legalMore">EAO forwards all posted comments to project proponents so that they can be duly considered during the project's Environmental Assessment (EA) process.</p>
 
-					<p>All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
+					<p ng-show="legalMore">Although you may provide your name and city/town when making a comment, in order to have your name displayed with your comment you must select the 'Show my name and location on the public site' option.</p>
 
+					<p ng-show="legalMore">All links/URLs in a comment will be removed as we cannot guarantee that the link will not break during the time the comment is publicly available in the EAO Project Information Centre. To include content from another web site, please attach it as a PDF to your comment.</p>
+					<p ng-show="legalMore"><a href ng-click="legalMore = false">Less</a></p>
 				</div>
 
 				<div ng-if="vm.comments.length !== 0 && (vm.project.dateCommentsOpen | isInThePast) && (vm.project.dateCommentsClosed | isInTheFuture)">
@@ -92,8 +94,9 @@
 									<div class="btn-group btn-group-sm">
 										<button class="btn btn-default" ng-click="vm.form.view = 'bydate'"	ng-class="{'btn-primary': vm.form.view === 'bydate'}">By Date</button>
 										<button class="btn btn-default" ng-click="vm.form.view = 'bytopic'"	ng-class="{'btn-primary': vm.form.view === 'bytopic'}">By Topic</button>
-										<button class="btn btn-default" ng-click="vm.form.view = 'bychart'"	ng-class="{'btn-primary': vm.form.view === 'bychart'}">By Topic Chart</button>
+										<button class="btn btn-default" ng-click="vm.form.view = 'bychart'"	ng-if="vm.commentsByTopicVis" ng-class="{'btn-primary': vm.form.view === 'bychart'}">By Topic Chart</button>
 									</div>
+
 								</li>
 							</ul>
 
@@ -114,15 +117,21 @@
 				</div>
 
 
-				<div ng-repeat="(heading, topic) in vm.commentsByTopicKeys | orderBy:'name' | filter:vm.filterBucketGroup" class="concern-list" ng-show="vm.form.view === 'bytopic' && vm.comments.length > 0">
+				<div ng-repeat="(heading, topic) in vm.commentsByTopicKeys | orderBy:'name' | filter:vm.filterBucketGroup" class="concern-list" ng-show="vm.form.view === 'bytopic' && vm.comments.length > 0" ng-init="toggleTopicComment[item._id] = false">
 					<h3 ng-click='form[heading] = !form[heading]' class="clickable concern-heading">
 						{{ heading }}<div class="pull-right small"><span ng-if="!form[heading]">Click to view.</span> Number of comments: {{ (vm.commentsByTopic[heading] | filter:vm.filterKeyword).length || 0 }}</div>
 					</h3>
 					<hr ng-if='!form[heading]'>
 					<div class="" ng-show='form[heading]'>
 							<div class="row comment-list" ng-repeat-start="item in vm.commentsByTopic[heading] | advancedFilter:vm.filterKeyword | orderBy:'dateAdded':true">
-								<div class="col-sm-6">
-									<pre>{{ item.comment }}</pre>
+								<div class="col-sm-9">
+									<pre class="form-group">{{ item.comment | max80Words:toggleTopicComment[item._id] }}</pre>
+									<p ng-if="(item.comment | wordCount) > 80">
+										<a href ng-click="toggleTopicComment[item._id] = !toggleTopicComment[item._id]">
+											<span ng-show="!toggleTopicComment[item._id]">More ({{ item.comment | wordCount }} words)</span>
+											<span ng-show="toggleTopicComment[item._id]">Less</span>										
+										</a>
+									</p>
 								</div>
 
 
@@ -132,22 +141,23 @@
 									<p>{{ item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
 									<ul class="list-unstyled document-vetting small">
 										<li ng-repeat="doc in item.documents">
-											<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus !== 'Rejected'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
-											<span class="small text-warning" ng-if="doc.eaoStatus === 'Rejected'"><i class="glyphicon glyphicon-file"></i> This document has not been shared as it does not meet the privacy policy rules.</span>
+											<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus == 'Published'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
 										</li>
 									</ul>
+	
+									<div class="form-group" ng-show="item.buckets.length > 0">
+										<label class="control-label">Related Topics</label>
+										<ul class="small">
+											<li ng-repeat="bucket in item.buckets">{{ bucket.name }}</li>
+										</ul>
+									</div>
 
 								</div>
 
-								<div class="col-sm-3" ng-show="item.buckets.length > 0">
-									<label class="control-label">Related Topics</label>
-									<ul class="small">
-										<li ng-repeat="bucket in item.buckets">{{ bucket.name }}</li>
-									</ul>
-								</div>
+
 
 							</div>
-							<hr ng-if="!$last" ng-repeat-end>
+							<hr ng-repeat-end>
 					</div>
 
 
@@ -167,10 +177,16 @@
 
 				<div ng-show="vm.form.view === 'bydate' && vm.comments.length > 0">
 					<div class="panel-body">
-						<div class="row comment-list" ng-repeat-start="item in commentsFiltered = (vm.comments | advancedFilter:vm.filterKeyword) | orderBy:'dateAdded':true">
+						<div class="row comment-list" ng-repeat-start="item in commentsFiltered = (vm.comments | advancedFilter:vm.filterKeyword) | orderBy:'dateAdded':true" ng-init="toggleDateComment[item._id] = false">
 
-							<div class="col-sm-6">
-								<pre>{{ item.comment }}</pre>
+							<div class="col-sm-9">
+								<pre class="form-group">{{ item.comment | max80Words:toggleDateComment[item._id] }}</pre>
+								<p ng-if="(item.comment | wordCount) > 80">
+									<a href  ng-click="toggleDateComment[item._id] = !toggleDateComment[item._id]">
+										<span ng-show="!toggleDateComment[item._id]">More ({{ item.comment | wordCount }} words)</span>
+										<span ng-show="toggleDateComment[item._id]">Less</span>										
+									</a>
+								</p>
 							</div>
 
 							<div class="col-sm-3">
@@ -179,19 +195,19 @@
 								<p>{{ item.dateAdded | amDateFormat:'MMM Do, YYYY h:mm a'}}</p>
 								<ul class="list-unstyled document-vetting small">
 									<li ng-repeat="doc in item.documents">
-										<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus !== 'Rejected'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
-										<span class="small text-warning" ng-if="doc.eaoStatus === 'Rejected'"><i class="glyphicon glyphicon-file"></i> This document has not been shared as it does not meet the privacy policy rules.</span>
+										<a href="/api/commentdocument/{{ doc._id }}/fetch" target="_blank" class="small" ng-if="doc.eaoStatus === 'Published'"><span class="glyphicon glyphicon-file"></span> {{ doc.name }}</a>
 									</li>
 								</ul>
 
+								<div class="form-group" ng-show="item.buckets.length > 0">
+									<label class="control-label">Related Topics</label>
+									<ul class="small">
+										<li ng-repeat="bucket in item.buckets">{{ bucket.name }}</li>
+									</ul>
+								</div>
+
 							</div>
 
-							<div class="col-sm-3" ng-show="item.buckets.length > 0">
-								<label class="control-label">Related Topics</label>
-								<ul class="small">
-									<li ng-repeat="bucket in item.buckets">{{ bucket.name }}</li>
-								</ul>
-							</div>
 
 						</div>
 						<hr ng-if="!$last" ng-repeat-end>
