--- a/modules/projects/client/views/project-public.html
+++ b/modules/projects/client/views/project-public.html
@@ -68,7 +68,7 @@
 			<div class="panel-body">
 				<div class="small form-group">
 
-					<h3>Submitting Public Comments: How It Works</h3>
+					<h3>Submitting Your Comments: How It Works</h3>
 
 					<p>Comments submitted to the Environmental Assessment Office (EAO), either online, by mail or by fax, will be published on the <a href="http://a100.gov.bc.ca/appsdata/epic/html/deploy/epic_home.html" target="_new">EAO Electronic Project Information Centre (ePIC)</a>.</p>
 
